# jfftw3

./: .gitignore  LICENSE  Makefile  README.md  build.xml  jfftw_Interface.c  jfftw_Interface.h
src/c/: CMakeLists.txt  common.h  jfftw.c  jfftw.h  jfftw_Execution.c  jfftw_Execution.h  jfftw_Interface.c  jfftw_Interface.h  jfftw_Plan.c  jfftw_Plan.h  jfftw_Wisdom.c  jfftw_Wisdom.h  jfftw_data_Alignment.c  jfftw_data_Alignment.h  jfftw_data_DirectAllocator.c  jfftw_data_DirectAllocator.h  jfftw_planning_DirectPlan.c  jfftw_planning_DirectPlan.h  jfftw_planning_Plan.c  jfftw_planning_Plan.h  jfftw_planning_PrimitivePlan.c  jfftw_planning_PrimitivePlan.h  jfftw_planning_Wisdom.c  jfftw_planning_Wisdom.h
src/jfftw/: Complex.java  ComplexArray.java  ComplexBuffer.java  Complexity.java  DirectPlan.java  Execution.java  Flag.java  Guru.java  Guru64.java  Interface.java  Interleave.java  Placement.java  Plan.java  PrimitivePlan.java  Real.java  RealArray.java  RealBuffer.java  Sign.java  Split.java  SplitArray.java  Value.java  Wisdom.java
src/jfftw/data/: Alignment.java  Dimensions.java  DirectAllocator.java
src/jfftw/enums/: Complexity.java  Flag.java
src/jfftw/examples/: BasicArray.java  BasicBuffer.java  Example1.java  FlagUsage.java  GuruExample.java  InPlace.java  MixedArrays.java  MixedComplexity.java  MultiDimensional.java  OutOfPlace.java  ParallelExecution.java
src/jfftw/exceptions/: NonDirectBufferException.java  UnsupportedComplexityException.java
src/jfftw/planning/: DirectPlan.java  Placement.java  Plan.java  PrimitivePlan.java  Wisdom.java
